--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
